--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 
-      <div id="main" class="container-fluid">
+      <div id="main" class="container">
       <div  class="same row col-lg-6 col-md-12 col-sm-12 col-xs-12">
         <h1> About VIT-TBI</h1>
         <p>Technology Business incubator (TBI) is an entity, which helps technology start-up businesses with, all the necessary resources / support that the start-up needs to evolve and grow as a mature business. Typically, TBIs provide incubatees, the start-up businesses supported by incubator, with necessary infrastructure support, technology/ prototype development support, research assistance, help in getting funding, business consulting assistance and do whatever is necessary to make the start-up a success. 
@@ -8,10 +8,8 @@
         </p>
         
       </div>
-      <div class="same row aboutlogo2 col-lg-6">
-        <img src="../../images/logo2.png">
-      </div>
-      <div class="row same col-lg-6 col-md-12col-sm-12 col-xs-12">
+      
+      <div class="same col-lg-6 col-md-12col-sm-12 col-xs-12">
       <h1> Thrust Areas</h1>
       <h5>VIT-TBI has identified the following technology areas as thrust sectors, taking in to consideration the market demands and industries situated in and around the industrial cluster of Katpadi - Ranipet – Vellore – Chennai - Bangalore Region. </h5>
         <ul>
@@ -20,10 +18,27 @@
           <li>Automotive / Mechanical Engineering sector related products and services</li>
           <li>Information Technology Products and Solutions</li>
           </ul>
+           
+          <div class="row"> 
+          <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
+          <img class="img-responsive" src="../images/about1.jpg" />
+          </div> 
+          <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="../images/about2.jpg" />
+          </div> 
+          <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="../images/about3.jpg" />
+          </div> 
+           
+          </div>
+           
        
         
       </div>
-      <div class="row container-fluid same col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <div class="same col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <h1>Selection Process</h1>
+          <p>A panel of eminent technocrats will process the applicants, interview the promoters and select the ventures for incubation after carefully evaluating the business idea, market availability, potential value of the technology, growth prospects, innovative content and promoter team. The panel will consist of experienced and qualified professionals from specific industry, leading bankers, seasoned venture capitalists and academicians of repute.</p>
+          <img src="../images/timeline.png" class="timeline">
+      </div>
+      <div class="row container same col-lg-12 col-md-12 col-sm-12 col-xs-12">
       
         
 
