--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,15 +1,29 @@
-   <div class="row">
-    <div class="col-lg-8">
-
+<div class="container">
+<div class="row">
+    <div class="bottomnav col-lg-3 col-md-3 col-sm-6 col-xs-6">
+  <ul>
+  	<li><a href="#/home">Home</a></li>
+  	<li><a href="#/about">About</a></li>
+  	<li><a href="http://www.vit.ac.in/" target="_a" >VIT</a></li>
+  </ul>
     
 </div>
- <div class="contact col-lg-4 col-md-6 col-sm-12 col-xs-12 ">
+<div class="bottomnav col-lg-3 col-md-3 col-sm-6 col-xs-6">
+<ul>
+	<li><a href="#/ourstartups">Startups</a></li>
+  	<li><a href="#/projects">Projects</a></li>
+  	<li><a href="#training">Training</a></li>
+  	<li><a href="#/apply">Apply</a></li>
+  	</ul>
+</div>
+ <div class="contact col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
   <h3>Address</h3>
   <p>VIT - Technology Business Incubator,<br>
 Vellore Institute of Technology,<br>
 Vellore – 632 014, Tamil Nadu, India.<br> 
 Tel. +91 416 224 3097<br>
 Email: vittbi@vit.ac.in, vittbi@yahoo.co.in </p>
+</div>
 </div>
 </div>
 <div class="row">
