--- a/css/about.css
+++ b/css/about.css
@@ -11,13 +11,22 @@
 	font-weight: bold;
 	color:#e6882c;
 }
-.same p,.same h5{
+.same p{
 	font-family: Roboto;
 	color:white;
+	font-size: 18px;
+}
+.same h5{
+	font-family: Roboto;
+	color:white;
+	font-size: 20px;
+	font-weight: 400;
+
 }
 .same ul li{
 	font-family: Roboto;
 	color:white;
+	font-size: 18px;
 }
 .same h3{
 	font-family: Roboto;
@@ -28,11 +37,36 @@
 .portfolio-item {
     margin-bottom: 25px;
 }
+.timeline{
+	width: 100%;
+	min-width: 400px;
+	margin-left:30px;
+
+}
 
 
 
+@media only screen and (max-width: 768px)  {
+.same p{
+	font-size: 0.7em;
+}    
+    .same h1{
+    	font-size: 1.2em;
+    	font-weight: 400;
+    }
+    .same ul li{
 
+    	font-size: 0.7em;
+    }
+    .same h5{
+    	font-size: 0.8em;
 
+    }
+    .same h3{
+    	font-size: 1em;
+
+    }
+}
 
 @media only screen and (max-width: 997px) and (min-width: 509px) {
 	
@@ -45,6 +79,11 @@
 	.aboutlogo2{
 		display: none;
 	}
+	.timeline{
+	width: 100%;
+	min-width: 300px;
+	margin-left: -20px;
+}   
 
 
 
